--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 <a id="omg-it-works" class="anchor" href="#omg-it-works" aria-hidden="true"><span class="octicon octicon-link"></span></a>OMG IT WORKS</h2>
 
 <p>Wow!</p>
+        <img src="images/doge.jpg" alt="wow" />
       </section>
 
     </div>
